package com.orbanszlrd.quizapi.modules.user.model;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
