@startuml Entity Relationship Diagram

!theme spacelab

skinparam backgroundColor #202020
skinparam CaptionFontColor #FFF
skinparam CaptionFontSize 18

header

end header

footer

end footer

title Quiz API

caption
Entity Relationship Diagram
end caption

left to right direction

class Category {
    - Long id
    - String name
    - List<Quiz> quizzes
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getName()
    + void setName(String name)
    + List<Quiz> getQuizzes()
    + void setQuizzes(List<Quiz> quizzes)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class Quiz {
    - Long id
    - String name
    - Integer timeLimit
    - Category category
    - List<Question> questions
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getName()
    + void setName(String name)
    + Category getCategory()
    + void setCategory(Category category)
    + List<Question> getQuestions()
    + void setQuestions(List<Question> questions)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
} 

class Question {
    - Long id
    - String text
    - Integer timeLimit
    - Quiz quiz
    - List<Answer> answers
    - Byte value
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getText()
    + void setText(String text)
    + Quiz getQuiz()
    + void setQuiz(Quiz quiz)
    + List<Answer> getAnswers()
    + void setAnswers(Answer answer)
    + Byte getValue()
    + void setValue(Byte value)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class Answer {
    - Long id
    - String text
    - Question question    
    - Boolean correct
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getText()
    + void setText(String text)
    + Question getQuestion()
    + void setQuestion(Question question)
    + Boolean isCorrect()
    + void setCorrect(Boolean correct)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class  User {
    - Long id
    - String email
    - Role role
    - String firstName
    - String LastName
    - Date dateOfBirth
    - Gender gender
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getEmail()
    + void setEmail(String email)
    + Role getRole()
    + void setRole(Role role)
    + String getFirstName()
    + void setFirstName(String firstName)
    + String getLastName()
    + void setLastName(String lastName)
    + Date getDateOfBirth()
    + void setDateOfBirth(Date dateOfBirth)
    + Gender getGender()
    + void setGender(Gender gender)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class  UserQuiz {
    - Long id
    - User user
    - Quiz quiz
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + User getUser()
    + void setUser(User user)
    + Quiz getQuiz()
    + void setQuiz(Quiz quiz)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class  UserAnswer {
    - Long id
    - UserQuiz userQuiz
    - Question question
    - Answer answer
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + UserQuiz getUserQuiz()
    + void setUserQuiz(UserQuiz userQuiz)
    + Question getQuestion()
    + void setQuestion(Question question)
    + Answer getAnswer()
    + void setAnswer(Answer answer)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

enum Role {
    OWNER
    ADMIN
    USER
}

enum Gender {
    FEMALE
    MALE
    OTHER
}

Category "1" *-- "many" Quiz
Quiz "1" *-- "many" Question
Question "1" *-- "many" Answer
Role "1" --* "many" User
Gender "1" --* "many" User
User "1" --* "many" UserQuiz
Quiz "1" --* "many" UserQuiz
UserQuiz "1" *-- "many" UserAnswer
Question "1" *-- "many" UserAnswer
Answer "1" *-- "many" UserAnswer

@enduml